# vpn_bot

./: .env.example  .gitignore  Cargo.toml  README.md
scripts/: deploy.sh
src/: config.rs  handlers.rs  main.rs  qr.rs  state.rs  storage.rs  xui.rs
src/xui/: links.rs  mod.rs  models.rs
