[package]
name = "vpn_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
image = "0.25"
log = "0.4"
pretty_env_logger = "0.5"
qrcode = "0.14"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = "0.17.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
